# ts2zig

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml
crates/ts-aot-backend/: Cargo.toml
crates/ts-aot-backend/src/: emitter.rs  error.rs  lib.rs  render.rs  tests.rs
crates/ts-aot-core/: Cargo.toml
crates/ts-aot-core/src/: diagnostics.rs  ids.rs  lib.rs  ty.rs  type_table.rs  visibility.rs
crates/ts-aot-core/tests/: type_table.rs
crates/ts-aot-ir-hir/: Cargo.toml
crates/ts-aot-ir-hir/src/: decl.rs  expr.rs  lib.rs  program.rs  stmt.rs
crates/ts-aot-ir-mir/: Cargo.toml
crates/ts-aot-ir-mir/src/: decl.rs  lib.rs  program.rs  runtime.rs
crates/ts-aot-ir-mir/src/body/: mod.rs  tests.rs
crates/ts-aot-ir-mir/src/dump/: decl.rs  expr.rs  mod.rs
crates/ts-aot-passes/: Cargo.toml
crates/ts-aot-passes/src/: context.rs  error.rs  lib.rs  lower_async.rs  lower_enums.rs  lower_result.rs  source_map.rs
crates/ts-aot-passes/src/hir_to_mir/: convert_expr.rs  convert_stmt.rs  converter.rs  mod.rs  ops.rs  program.rs  tests.rs
crates/ts-aot-passes/src/lower_closures/: closure_lift.rs  mod.rs  rewrite.rs  tests.rs  walk.rs  walk_expr.rs  walk_stmt.rs
crates/ts-aot-passes/tests/: pipe.rs
crates/ts2zig-core/: Cargo.toml
crates/ts2zig-core/src/: ids.rs  lib.rs  string_table.rs  symbol_table.rs
crates/ts2zig-core/tests/: string_table.rs  symbol_table.rs
crates/ts2zig-ir-hir/: Cargo.toml
crates/ts2zig-ir-hir/src/: decl.rs  expr.rs  lib.rs  program.rs  stmt.rs
crates/ts2zig-ir-mir/src/: body.rs  decl.rs  lib.rs  program.rs
crates/ts2zig-ir-mir/src/body/: mod.rs  tests.rs
crates/ts2zig-ir-mir/src/dump/: decl.rs  expr.rs  mod.rs
crates/ts2zig-passes/: Cargo.toml
crates/ts2zig-passes/src/: context.rs  error.rs  lib.rs  lower_async.rs  lower_enums.rs  lower_result.rs  source_map.rs
crates/ts2zig-passes/src/hir_to_mir/: convert_expr.rs  convert_stmt.rs  converter.rs  mod.rs  ops.rs  program.rs  tests.rs
crates/ts2zig-passes/tests/: pipe.rs
